tdf#122055: catch RuntimeException if a11y context no longer alive

otherwise Desktop::Main will do it and soffice will crash w/ empty
error msg

Change-Id: I56768909227a6ff158ae353e1eff9b249d6ba9d4
Reviewed-on: https://gerrit.libreoffice.org/65357
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit d41bc9bd9359eb83f807fdfa72dbde0831f39be8)
Reviewed-on: https://gerrit.libreoffice.org/65384